Backend (no security) with added properties.
